--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -236,7 +236,7 @@
     "  --model blup lasso top1 enet \\\n",
     "  --container /mnt/mfs/statgen/containers/twas_latest.sif \n",
     " \n",
-    "sos run twas_fusion_susie.ipynb compute_wgt_1 \\\n",
+    "sos run /home/hs3163/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb compute_wgt \\\n",
     "  --molecular-pheno ./molecular_phenotype \\\n",
     "  --wd ./ \\\n",
     "  --genotype_list ./geno_dir \\\n",
@@ -263,7 +263,64 @@
     "  --asso_mem \"2G\" \\\n",
     "  -J 6 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml \\ \n",
     "  -s build &\n",
-    "  \n"
+    "  \n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb twas_fusion  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz/Alz_AC_SNP/ \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_AC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /home/hs3163/Project/Alz/Alz_AC_SNP/WEIGHTS \\\n",
+    "  --weights_list /home/hs3163/Project/Alz/Alz_AC_SNP/WEIGHTS/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"20G\" \\\n",
+    "  -J 50 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -s build &\n",
+    "  \n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb twas_fusion  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz/Alz_DLPFC_SNP/ \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_DLPFC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /home/hs3163/Project/Alz/Alz_DLPFC_SNP/WEIGHTS \\\n",
+    "  --weights_list /home/hs3163/Project/Alz/Alz_DLPFC_SNP/WEIGHTS/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"20G\" \\\n",
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml \\\n",
+    "  -s build &\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb twas_fusion  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz/Alz_PCC_SNP/ \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_PCC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /home/hs3163/Project/Alz/Alz_PCC_SNP/WEIGHTS \\\n",
+    "  --weights_list /home/hs3163/Project/Alz/Alz_PCC_SNP/WEIGHTS/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"20G\" \\\n",
+    "  -J 50 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -s build &\n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "  "
    ]
   },
   {
@@ -564,7 +621,7 @@
     "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', container = container\n",
-    "    FUSION.compute_weights.R \\\n",
+    "    Rscript /home/hs3163/GIT/neuro-twas/Workflow/FUSION-Copy1.compute_weights.R \\\n",
     "    --bfile $[_input[0]:n] \\\n",
     "    --tmp $[_input[0]:n].tmp \\\n",
     "    --out $[_output[0]:nn] \\\n",
