computing script overwrite

--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -316,7 +316,21 @@
     "  -s build &\n",
     "  \n",
     "  \n",
-    "  \n",
+    " nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz/Alz_PCC_SNP/ \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_PCC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /home/hs3163/Project/Alz/Alz_PCC_SNP/WEIGHTS \\\n",
+    "  --weights_list /home/hs3163/Project/Alz/Alz_PCC_SNP/WEIGHTS/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  -J 50 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  --asso_mem \"20G\" -s build &\\\n",
     "  \n",
     "  \n",
     "  \n",
@@ -349,7 +363,7 @@
     }
    ],
    "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "nohup sos dryrun ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
     "  --wd /home/hs3163/Project/TWAS/wgt/DLPFC/ \\\n",
@@ -407,7 +421,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept_chr7.txt \\\n",
+    "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "  --wd /home/hs3163/Project/Alz/diag/ \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list  /home/hs3163/Project/Alz/data/RSM_Alz_region_list_PCC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /home/hs3163/Project/Alz/diag/WEIGHTS \\\n",
+    "  --weights_list /home/hs3163/Project/Alz/diag/WEIGHTS/wgt_ls \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"20G\" \\\n",
+    "  -s build &\n",
+    "  \n",
+    " /home/hs3163/Project/Alz/data/RSM_Alz_region_list_PCC.txt"
+   ]
   },
   {
    "cell_type": "code",
@@ -417,7 +449,32 @@
    },
    "outputs": [],
    "source": [
-    "pwd"
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept_chr7.txt \\\n",
+    "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "  --wd /home/hs3163/Project/TWAS/wgt/PCC/ \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list_1.txt \\\n",
+    "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /home/hs3163/Project/TWAS/wgt/PCC \\\n",
+    "  --weights_list /home/hs3163/Project/TWAS/wgt/PCC/wgt_ls \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"50G\" &\n",
+    "  \n",
+    "  \n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test   \\\n",
+    "--gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept_chr7.txt  \\\n",
+    "--molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "--wd /home/hs3163/Project/Alz/diag/ \\\n",
+    "--genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list_1.txt  \\\n",
+    "--region_list  /home/hs3163/Project/Alz/data/RSM_Alz_region_list_PCC.txt \\\n",
+    "--region_name 1   --data_start 2   --window 500000 \\\n",
+    "--weights_path /home/hs3163/Project/Alz/diag/WEIGHTS  \\\n",
+    "--weights_list /home/hs3163/Project/Alz/diag/WEIGHTS/wgt_ls  \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif   --job_size 1  --asso_mem \"20G\"   -s build &\n"
    ]
   },
   {
@@ -607,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 1,
    "metadata": {
     "kernel": "SoS"
    },
@@ -619,7 +676,7 @@
     "output: f'{weights_path}/{_input[0]:bn}.wgt.RDat'\n",
     "import os\n",
     "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '36h',  mem = '10G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', container = container\n",
     "    Rscript /home/hs3163/GIT/neuro-twas/Workflow/FUSION-Copy1.compute_weights.R \\\n",
     "    --bfile $[_input[0]:n] \\\n",
