computing script overwrite

--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -678,7 +678,7 @@
     "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '36h',  mem = '10G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', container = container\n",
-    "    Rscript /home/hs3163/GIT/neuro-twas/Workflow/FUSION-Copy1.compute_weights.R \\\n",
+    "    FUSION.compute_weights.R \\\n",
     "    --bfile $[_input[0]:n] \\\n",
     "    --tmp $[_input[0]:n].tmp \\\n",
     "    --out $[_output[0]:nn] \\\n",
