--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -349,6 +349,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sos run ../../GIT/freshcopy/neuro-twas/Workflow/mv_susie.ipynb fusion_tf_cv \\\n",
+    "--molecular_pheno_dir mole_pheno_ls   \\\n",
+    "--region_list cand_rgs.txt  \\\n",
+    "--wd ./   \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container gaow/twas --impute TRUE \\\n",
+    "--cv_times 2  &"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb fusion_tf \\ \n",
     "--molecular_pheno_dir \"molecular_phenotype_list\"   \\\n",
     "--region_list region_list  \\\n",
