--- a/Workflow/susie-wgs-prior.ipynb
+++ b/Workflow/susie-wgs-prior.ipynb
@@ -403,7 +403,7 @@
     "        f'{_input[0]:n}.fam'\n",
     "\n",
     "# look up for genotype file\n",
-    "geno_file = get_genotype_file(_regions[0],genotype_list,geno_inventory)\n",
+    "geno_file = get_genotype_file(_regions[3],genotype_list,geno_inventory)\n",
     "\n",
     "parameter: extract_snp = f'{geno_file:an}.bim'\n",
     "parameter: exclude_snp = \"./.\"\n",
@@ -590,7 +590,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": []
   }
@@ -626,7 +628,7 @@
      "sos"
     ]
    ],
-   "version": "0.20.1"
+   "version": "0.22.3"
   }
  },
  "nbformat": 4,
