--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -807,7 +807,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "## Conducting susieR test\n",
     "This step conduct 100 times 5 fold cross validation for the susieR weights"
@@ -816,7 +818,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "# CV with univariate susie\n",
@@ -993,7 +997,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "## Save output\n",
     "This step create the all_hsq.txt file to summarize the susie result and create a R object to host all the susieR models."
@@ -1002,7 +1008,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "#Create all_hsq for susie and saved all the susie object into one RData\n",
@@ -1039,7 +1047,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "#Create all_hsq for susie and saved all the susie object into one RData\n",
@@ -1104,7 +1114,7 @@
      "sos"
     ]
    ],
-   "version": "0.20.1"
+   "version": "0.22.3"
   }
  },
  "nbformat": 4,
