--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -452,7 +452,7 @@
    },
    "outputs": [],
    "source": [
-    "[mv_susie_1,mv_susie_cv_1]\n",
+    "[snp_exclude_1,mv_susie_1,mv_susie_cv_1]\n",
     "input:  molecular_pheno_dir, for_each = \"regions\"\n",
     "output: f'{wd:a}/cache/{name_prefix}.{_regions[0]}.merged_list',\n",
     "        f'{wd:a}/cache/{name_prefix}.{_regions[0]}.merged.bed',\n",
@@ -495,9 +495,38 @@
     "          --mac 1 \\\n",
     "          --make-bed \\\n",
     "          --out $[_output[1]:n] \\\n",
-    "          --allow-no-sex\n",
-    "\n"
+    "          --allow-no-sex \\\n",
+    "          --extract $[extract_snp]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[snp_exclude_2]\n",
+    "parameter: bed_list = path\n",
+    "input: group_by = 3, group_with = 'regions'\n",
+    "output: f'{wd:a}/cache_snp/{name_prefix}.{_regions[0]}.merged.bed'\n",
+    "parameter: extract_snp = path\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '10G', tags = f'{step_name}_{_output[0]:bn}'  \n",
+    "bash: expand = \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
+    "    # create the merged output X\n",
+    "    plink --bfile $[_input[1]:n] \\\n",
+    "          --mac 1 \\\n",
+    "          --make-bed \\\n",
+    "          --out $[_output:n] \\\n",
+    "          --allow-no-sex \\\n",
+    "          --extract $[extract_snp]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -647,7 +676,8 @@
     "    save(scaled_$[_regions[0]],file = \"$[_output[1]]\")\n",
     "    #Output: Weight\n",
     "    m_$[_regions[0]]$coef%>%as.data.frame()%>%write_delim(\"$[_output[2]]\",delim = \"\\t\")\n",
-    "    "
+    "\n",
+    "                 "
    ]
   },
   {
