--- a/Workflow/susie-wgs-prior.ipynb
+++ b/Workflow/susie-wgs-prior.ipynb
@@ -356,7 +356,7 @@
    },
    "outputs": [],
    "source": [
-    "[susie_1,susie_cv_1]\n",
+    "[hsq_1,susie_1,susie_cv_1]\n",
     "input: molecular_pheno, for_each = \"regions\"\n",
     "output: f'{wd:a}/cache/{_input:bn}.{_regions[3]}.exp',\n",
     "        f'{wd:a}/cache/{_input:bn}.{_regions[3]}.pheno'\n",
@@ -396,7 +396,7 @@
    },
    "outputs": [],
    "source": [
-    "[susie_2,susie_cv_2]\n",
+    "[hsq_2,susie_2,susie_cv_2]\n",
     "input: group_by = 2, group_with = 'regions'\n",
     "output: f'{_input[0]:n}.bed',\n",
     "        f'{_input[0]:n}.bim',\n",
@@ -417,12 +417,134 @@
     "    --out $[_output[0]:n] \\\n",
     "    --chr $[_regions[0]] \\\n",
     "    --from-bp $[int(_regions[1]) - window ] \\\n",
-    "    --to-bp $[int(_regions[2]) + window ] \\\n",
+    "    --to-bp $[int(_regions[1]) + window ] \\\n",
     "    --keep $[keep_sample] \\\n",
     "    --extract $[extract_snp]\n",
     "    --exclude $[exclude_snp]\n",
     "    --allow-no-sex || true\n",
     "    touch $[_output]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Heritability Estimation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[hsq_3]\n",
+    "input: group_by = 2, group_with = 'regions'\n",
+    "output: f'{_input[0]:n}.bed',\n",
+    "        f'{_input[0]:n}.bim',\n",
+    "        f'{_input[0]:n}.fam'\n",
+    "\n",
+    "import os\n",
+    "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = \"6G\" , tags = f'{step_name}_{_output[0]:bn}'\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout', container = container,volumes = [f'{wd:a}:{wd:a}']\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"susieR\")\n",
+    "    library(\"plink2R\")\n",
+    "    library(\"readr\")\n",
+    "    library(\"modelr\")\n",
+    "    library(\"purrr\")\n",
+    "    library(\"abind\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # Perform i/o checks here:\n",
+    "    files = c($[_input[0]],$[_input[1]],$[_input[2]])\n",
+    "\n",
+    "    for ( f in files ) {\n",
+    "        if ( !file.exists(f) ){\n",
+    "            cat( \"ERROR: \", f , \" input file does not exist\\n\" , sep='', file=stderr() )\n",
+    "            cleanup()\n",
+    "            q()\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    if ( system( paste(\"plink\",\"--help\") , ignore.stdout=T,ignore.stderr=T ) != 0 ) {\n",
+    "        cat( \"ERROR: plink could not be executed \\n\" , sep='', file=stderr() )\n",
+    "        cleanup()\n",
+    "        q()\n",
+    "    }\n",
+    "\n",
+    "    if ( system( \"gcta64\" , ignore.stdout=T,ignore.stderr=T ) != 0 ){\n",
+    "        cat( \"ERROR: gcta (gcta64) could not be executed \" , sep='', file=stderr() )\n",
+    "        cleanup()\n",
+    "        q()\n",
+    "    }\n",
+    "\n",
+    "    # --- \n",
+    "    # Set up the \"input\"\n",
+    "    opt = list()\n",
+    "    opt$bfile = \"$[_input[0]:n]\"\n",
+    "    opt$tmp = \"$[_input[0]:n].tmp\"\n",
+    "    opt$PATH_plink = \"plink\"\n",
+    "    opt$PATH_gcta = \"gcta64\"\n",
+    "    \n",
+    "    \n",
+    "    # ---\n",
+    "\n",
+    "    fam = read.table(paste(opt$bfile,\".fam\",sep=''),as.is=T)\n",
+    "\n",
+    "    # Make/fetch the phenotype file\n",
+    "    \n",
+    "        pheno.file = paste(opt$tmp,\".pheno\",sep='')\n",
+    "        pheno = fam[,c(1,2,6)]\n",
+    "        write.table(pheno,quote=F,row.names=F,col.names=F,file=pheno.file)\n",
+    "   \n",
+    "    geno.file = opt$tmp\n",
+    "    # recode to the intersection of samples and new phenotype\n",
+    "    arg = paste( opt$PATH_plink ,\" --allow-no-sex --bfile \",opt$bfile,\" --pheno \",pheno.file,\" --keep \",pheno.file,\" --make-bed --out \",geno.file,sep='')\n",
+    "    system(arg , ignore.stdout=SYS_PRINT,ignore.stderr=SYS_PRINT)\n",
+    "\n",
+    "    # --- HERITABILITY ANALYSIS\n",
+    "    \n",
+    "    # 1. generate GRM\n",
+    "    arg = paste( opt$PATH_plink,\" --allow-no-sex --bfile \",opt$tmp,\" --make-grm-bin --out \",opt$tmp,sep='')\n",
+    "    system(arg , ignore.stdout=SYS_PRINT,ignore.stderr=SYS_PRINT)\n",
+    "\n",
+    "    # 2. estimate heritability\n",
+    "    if ( !is.na(opt$covar) ) {\n",
+    "    arg = paste( opt$PATH_gcta ,\" --grm \",opt$tmp,\" --pheno \",raw.pheno.file,\" --qcovar \",opt$covar,\" --out \",opt$tmp,\" --reml --reml-no-constrain --reml-lrt 1\",sep='')\n",
+    "    } else {\n",
+    "    arg = paste( opt$PATH_gcta ,\" --grm \",opt$tmp,\" --pheno \",pheno.file,\" --out \",opt$tmp,\" --reml --reml-no-constrain --reml-lrt 1\",sep='')\n",
+    "    }\n",
+    "    system(arg , ignore.stdout=SYS_PRINT,ignore.stderr=SYS_PRINT)\n",
+    "\n",
+    "    # 3. evaluate LRT and V(G)/Vp\n",
+    "    if ( !file.exists( paste(opt$tmp,\".hsq\",sep='') ) ) {\n",
+    "        cat(opt$tmp,\"does not exist, likely GCTA could not converge, skipping gene\\n\",file=stderr())\n",
+    "        cleanup()\n",
+    "        q()\n",
+    "    }\n",
+    "\n",
+    "    hsq.file = read.table(file=paste(opt$tmp,\".hsq\",sep=''),as.is=T,fill=T)\n",
+    "    hsq = as.numeric(unlist(hsq.file[hsq.file[,1] == \"V(G)/Vp\",2:3]))\n",
+    "    hsq.pv = as.numeric(unlist(hsq.file[hsq.file[,1] == \"Pval\",2]))\n",
+    "\n",
+    "    if ( opt$verbose >= 1 ) cat(\"Heritability (se):\",hsq,\"LRT P-value:\",hsq.pv,'\\n')\n",
+    "    if ( opt$save_hsq ) cat( opt$out , hsq , hsq.pv , '\\n' , file=paste(opt$out,\".hsq\",sep='') )\n",
+    "\n",
+    "    # 4. stop if insufficient\n",
+    "    if ( hsq[1] < 0 || hsq.pv > opt$hsq_p ) {\n",
+    "        cat(opt$tmp,\" : heritability \",hsq[1],\"; LRT P-value \",hsq.pv,\" : skipping gene\\n\",sep='',file=stderr())\n",
+    "        cleanup()\n",
+    "        q()\n",
+    "    }\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
