--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -466,7 +466,7 @@
     "  \n",
     "  \n",
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test   \\\n",
-    "--gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept_chr7.txt  \\\n",
+    "--gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt  \\\n",
     "--molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
     "--wd /home/hs3163/Project/Alz/diag/ \\\n",
     "--genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list_1.txt  \\\n",
@@ -474,7 +474,7 @@
     "--region_name 1   --data_start 2   --window 500000 \\\n",
     "--weights_path /home/hs3163/Project/Alz/diag/WEIGHTS  \\\n",
     "--weights_list /home/hs3163/Project/Alz/diag/WEIGHTS/wgt_ls  \\\n",
-    "--container /mnt/mfs/statgen/containers/twas_latest.sif   --job_size 1  --asso_mem \"20G\"   -s build &\n"
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif   --job_size 1  --asso_mem \"50G\"   -s build &\n"
    ]
   },
   {
@@ -641,7 +641,7 @@
     "    --from-bp $[int(_regions[1]) - window ] \\\n",
     "    --to-bp $[int(_regions[2]) + window ] \\\n",
     "    --keep $[keep_sample] \\\n",
-    "    --extract $[extract_snp]\n",
+    "    --extract $[extract_snp] \\\n",
     "    --exclude $[exclude_snp]\n",
     "    --allow-no-sex || true\n",
     "    touch $[_output]"
