--- a/workflow/ROSMAP_reformatting.ipynb
+++ b/workflow/ROSMAP_reformatting.ipynb
@@ -6,7 +6,7 @@
     "kernel": "SoS"
    },
    "source": [
-    "# Name Change\n",
+    "# Rosmap Gene expression data reformatting\n",
     "## Aim\n",
     "\n",
     "The aim of this pipeline is to change the header of gene expression file based on a reference file that are made externally. \n",
