--- a/workflow/complete_mv_susie_workflow.ipynb
+++ b/workflow/complete_mv_susie_workflow.ipynb
@@ -4,20 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Complete documentation of reexcution of TWAS Rosmap MV Susie analysis\n",
-    "Plan:\n",
-    "1. Estimation of whole genome uni susie\n",
-    "2. Prior estimation with the new flashier pipeline\n",
-    "2.5 estimation of GCTA heritability for whole genome\n",
-    "2.5 reestimation of GCTA heritability\n",
-    "3. whole genome merging, remove extracted snps\n"
+    "# Complete documentation of excution of TWAS Rosmap MV Susie analysis\n",
+    "## Overview\n",
+    "1. Data Reformating\n",
+    "2. Univariate SuSiE\n",
+    "2. Estimation of whole genome prior\n",
+    "3. multivariate susie\n",
+    "4. Reformatting of mv SuSiE result\n",
+    "5. Association testing\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data reformatting"
+    "## Data reformatting"
    ]
   },
   {
@@ -129,14 +130,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Compute the mixture prior ( Use the updated version)"
+    "### Compute the mixture prior ( Use the updated version)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merging the tissues"
+    "#### Merging the tissues"
    ]
   },
   {
@@ -158,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extracting the strongest, null .etc signals"
+    "#### Extracting the strongest, null .etc signals"
    ]
   },
   {
@@ -180,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create flashr output\n"
+    "#### Create flashr output\n"
    ]
   },
   {
@@ -226,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extreme Deconvolution"
+    "#### Extreme Deconvolution"
    ]
   },
   {
@@ -274,7 +275,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MV SuSie with mixture prior"
+    "## MV SuSiE\n",
+    "### Extracting Overlapped SNPs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nohup sos run ~/GIT/neuro-twas/workflow/mv_susie.ipynb snp_exclude \\\n",
+    "--molecular_pheno_dir \"/mnt/mfs/statgen/neuro-twas/mv_wg/molecular_phenotype_list\" \\\n",
+    "--region_list /mnt/mfs/statgen/neuro-twas/mv_wg/wg_rds_list_final \\\n",
+    "--wd \"/mnt/mfs/statgen/neuro-twas/whole_genome_0504/\" \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--impute TRUE --job_size 1 \\\n",
+    "--cv_times 100 \\\n",
+    "--mixture_prior '/home/hs3163/Project/Genome_prior/mixture_prior/output/susie.ed.rds' \\\n",
+    "--extract_snp \"~/Project/Alz/data/AD_sumstats_SNP\" \\\n",
+    "-J 200 -q csg -c ~/GIT/neuro-twas/code/csg.yml -s build &"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Weight estimation With three types of mixture prior"
    ]
   },
   {
@@ -315,6 +343,93 @@
     "--cv_times 100 \\\n",
     "--mixture_prior '/home/hs3163/Project/Genome_prior/mixture_prior/output/susie.teem.rds' \\\n",
     "-J 200 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Output Reformatting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb fusion_tf \\\n",
+    "--molecular_pheno_dir mole_pheno_ls   --region_list wg_rds_list_final  --wd ./ \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--impute TRUE --cv_times 2  &"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Association testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "  --wd /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/DLPFC \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/DLPFC \\\n",
+    "  --weights_list /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/DLPFC/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --max_impute 1\\\n",
+    "  --asso_mem \"50G\" \\\n",
+    "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -s build &\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "  --wd /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/PCC \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/PCC \\\n",
+    "  --weights_list /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/PCC/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --max_impute 1\\\n",
+    "  --asso_mem \"50G\" \\\n",
+    "  -J 40 -q neurology -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -s build &\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "  --wd /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/AC \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/AC \\\n",
+    "  --weights_list /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/AC/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --max_impute 1\\\n",
+    "  --asso_mem \"50G\" \\\n",
+    "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -s build &"
    ]
   }
  ],
