--- a/workflow/complete_mv_susie_workflow.ipynb
+++ b/workflow/complete_mv_susie_workflow.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Complete documentation of excution of TWAS Rosmap MV Susie analysis\n",
+    "\n",
+    "This file document a complete workflow to generate multivariate susie TWAS result for the ROSMAP data set \n",
+    "\n",
     "## Overview\n",
     "1. Data Reformating\n",
     "2. Univariate SuSiE\n",
