--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -11,21 +11,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This project leverages available molecular phenotype data in brains to perform TWAS for AD, in a variety of AD cohorts.\n",
+    "#### This project leverages available molecular phenotype data in brains to perform TWAS for Alzheimer's Disease(AD) in various AD cohorts.\n",
     "\n",
-    "Using multi-omics data from brains for >1000 individuals, we train models for predicting from genotypes molecular phenotypes, ie, gene expression, alternative splicing, APA, methylation, histone acetylation, etc. We will also leverage genomic annotations obtained for different brain tissues and cell types to improve the predictions. Prediction of molecular phenotypes using models trained will be applied to multi-ethnic AD cohorts, to perform association testing for a number of AD related phenotypes including age at onset and cognitive memory functions.\n",
+    "#### Currently, the established benchmark of TWAS analysis is the FUSION pipeline, which computes the associations between genotypes and expressions using various models and calculates the TWAS effect size using the results from the best performing one.\n",
     "\n",
-    "We will also explore the possibility to predict one molecular phenotype from others and to complete missing values in these phenotypes.\n",
+    "#### In this repo, we have constructed two workflows. TWAS-fusion(Hyperlink) connects the steps for FUSION analysis into a ready-to-use pipeline. On the other hand, our implementation of TWAS analysis, multivariate susie (mv-susie)(Hyperlink) workflow, can train models that predicted various molecular phenotypes, i.e., gene expression, alternative splicing, APA, methylation, histone acetylation, simultaneously.\n",
     "\n",
+    "#### A pilot study with ~1000 samples and three brain regions have demonstrated the performance and feasibility of mv-susie using a set of published risk locus. In two out of the three tissues, multivariate susie workflows outperform FUSION benchmark in terms of imputation accuracy for more than 40% of genes and can identify more higher number of TWAS significant genes.\n",
     "\n",
-    "This project aims to incorporate transcription information in predicting the risk of Alzheimer's disease based on individuals' genotypes. Currently, the established benchmark of TWAS analysis is the FUSION pipeline, which computes the associations between genotypes and expressions using five different models. The best performing one is used to calculate the TWAS effect size.\n",
-    "\n",
-    "After preliminary analysis using the Fusion/TWAS pipeline, the student builds a customized multivariate sum of single effect(SuSiE) analysis workflow using python, bash, and R. \n",
-    "\n",
-    "Based on the ROSMAP dataset, constituted of three brain tissues, these workflows compute the mixture prior via factor analysis based on a univariate association and conduct multivariate Bayesian-based regression to impute expression and calculate each gene's TWAS effect size.\n",
-    "\n",
-    "Among the selected risk locus, the workflows outperform the established FUSION benchmark in terms of imputation accuracy and the number of significant TWAS genes.\n"
+    "#### A whole-genome study aiming to identify further TWAS Significant genes using more brain tissues is ongoing.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
