--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "#### Currently, the established benchmark of TWAS analysis is the FUSION pipeline, which computes the associations between genotypes and expressions using various models and calculates the TWAS effect size using the results from the best performing one.\n",
     "\n",
-    "#### In this repo, we have constructed two workflows. TWAS-fusion(Hyperlink) connects the steps for FUSION analysis into a ready-to-use pipeline. On the other hand, our implementation of TWAS analysis, multivariate susie (mv-susie)(Hyperlink) workflow, can train models that predicted various molecular phenotypes, i.e., gene expression, alternative splicing, APA, methylation, histone acetylation, simultaneously.\n",
+    "#### In this repo, we have constructed two workflows. [TWAS-fusion](http://https://hsun3163.github.io/neuro-twas/workflow/twas_fusion.html) connects the steps for FUSION analysis into a ready-to-use pipeline. On the other hand, our implementation of TWAS analysis, multivariate susie, [mv-susie](https://hsun3163.github.io/neuro-twas/workflow/mv_susie.html), can train models that predicted various molecular phenotypes, i.e., gene expression, alternative splicing, APA, methylation, histone acetylation, simultaneously.\n",
     "\n",
     "#### A pilot study with ~1000 samples and three brain regions have demonstrated the performance and feasibility of mv-susie using a set of published risk locus. In two out of the three tissues, multivariate susie workflows outperform FUSION benchmark in terms of imputation accuracy for more than 40% of genes and can identify more higher number of TWAS significant genes.\n",
     "\n",
